--- a/CSS Files/prac1.css
+++ b/CSS Files/prac1.css
@@ -5,3 +5,14 @@
 .brown{
     color:brown;
 }
+
+h3{
+    text-align: center;
+}
+
+img{
+    width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
