--- a/CSS Files/prac4.css
+++ b/CSS Files/prac4.css
@@ -1,5 +1,8 @@
 body{
     background-color:burlywood;
+    font-family:courier,arial,helvetica;
+    font-weight:600;
+    font-size:1.1em;
 }
 h1{
     color:green;
