--- a/CSS Files/prac5.css
+++ b/CSS Files/prac5.css
@@ -1,10 +1,11 @@
 body{
     text-align: center;
-    background-color: grey;
+    background: grey;
 }
 
 h1{
     color:white;
+    text-transform: uppercase;
 }
 
 img{
