--- a/CSS Files/prac6.css
+++ b/CSS Files/prac6.css
@@ -14,6 +14,7 @@
         color: black;
         font-size: 45px;
         padding-top: 30px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       }
 
       .d1{
