--- a/CSS Files/prac6.css
+++ b/CSS Files/prac6.css
@@ -8,7 +8,7 @@
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       }
       
-      h1 {
+      body h1 {
         text-align: center;
         letter-spacing: 3px;
         color: black;
