--- a/CSS Files/prac7.css
+++ b/CSS Files/prac7.css
@@ -19,3 +19,13 @@ body{
     margin-bottom: 10px;
     padding: 10px 50px;
 }
+
+.footer{
+    background-color:lightpink;
+    justify-content: center;
+    display: flex;
+    font-size: 40px;
+    height: 70px;
+    margin-bottom: 10px;
+    padding: 10px 50px;
+}
