--- a/CSS Files/prac7.css
+++ b/CSS Files/prac7.css
@@ -6,7 +6,7 @@
 body{
     align-content: center;
     margin: 10px;
-    color: white;
+    color: black;
     font-family: sans-serif;
     text-align: center;
 }
