--- a/CSS Files/prac7.css
+++ b/CSS Files/prac7.css
@@ -9,16 +9,112 @@ body{
     color: black;
     font-family: sans-serif;
     text-align: center;
+    color:white;
+}
+.container{
+    border: 8px solid lightgrey;
+    padding: 6px;
 }
 .header{
     background-color:darkgrey;
     justify-content: center;
     display: flex;
     font-size: 40px;
+    align-items:center;
     height: 70px;
     margin-bottom: 10px;
     padding: 10px 10px;
 }
+
+.banner{
+    background-color: lightblue;
+    margin: 10px 0 10px 0;
+    display: flex;
+    justify-content: center;
+    height:700px;
+    font-size: 40px;
+    align-items: center;
+}
+
+.heading{
+    font-size: 40px;
+    color:black;
+    margin: 10px 0 10px 0;
+}
+
+.circle{
+    border-radius: 50%;
+    height: 320px;
+    width:320px;
+    background-color: rgb(240,200,0);
+    margin:10px 35px 10px 35px;
+    align-items: center;
+    justify-content: center;
+}
+
+.sec1 {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 34s0px;
+    align-items: center;
+    justify-content: center;
+  }
+
+.sec2 {
+    display: flex;
+    flex-direction: row;
+    height: 540px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    width: 100%;
+  }
+
+.left{
+    background-color: rgb(116, 113, 113);
+    width: 50%;
+    height: 540px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    margin: 5px;
+}
+
+.right{
+    display:flex;
+    flex-direction: column;
+    width: 50%;
+    height: 550px;
+}
+
+.article{
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(129, 91, 129);
+    font-size: 40px;
+    height: 180px;
+}
+
+.box {
+    height: 400px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    width: 100%;
+  }
+  
+.rect{
+    background-color: rgb(54, 204, 116);
+    width: 22%;
+    margin: 10px 15px;
+  }
+
 
 .footer{
     background-color:lightpink;
@@ -26,6 +122,6 @@ body{
     display: flex;
     font-size: 40px;
     height: 70px;
-    margin-bottom: 10px;
     padding: 10px 50px;
+    align-items: center;
 }
